--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header id="masthead">
-    <div class="container">
+    <div class="flex-container">
       <a href="index.html" id="logo">Your Name</a>
       <nav>
         <a href="index.html">About</a>
