--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
 
   <header id="masthead">
-    <div class="flex-container">
+    <div class="container">
+      <div class="row1">
       <a href="index.html" id="logo">Your Name</a>
+      </div>
+      <div class="row2">
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
+      </div>
     </div>
   </header>
 
