--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style-resp.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style-resp2.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
