--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style-resp.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style-resp2.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
